# pai_training

./: .gitignore  README.md  pyproject.toml
configs/: conversion_config.yaml  crane_features.py  cudacheck.py  train_config.yaml  train_config_15:00best.yaml  train_config_20HzBEST.yaml  train_config_32chunk.yaml  train_config_old.yaml
scripts/: debug_policy.py  debug_policy_1154.py  error.txt  howtouse.txt  infer.py  infer_1023.py  infer_1046.py  infer_1101.py  infer_20Hz.py  infer_7_31.py  infer_t_data.py  rosbag2lerobot.py  train.py  visualize.py  visualize_dataset.py
