[project]
authors = [{name = "Tatsuya Kamijo", email = "tatsukamijo@icloud.com"}]
dependencies = []
name = "pai_training"
requires-python = ">= 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.10.*"
ffmpeg = "6.1.1.*"
pymunk = "==6.6.0"

[tool.pixi.system-requirements]
libc = { family = "glibc", version = "2.31" }

[tool.pixi.pypi-dependencies]
pai_training = { path = ".", editable = true }
lerobot = { path = "lerobot", editable = true, extras = ["pi0", "test", "pusht"] }

[tool.pixi.tasks]
