[project]
authors = [{name = "Tatsuya Kamijo", email = "tatsukamijo@icloud.com"}]
dependencies = []
name = "pai_training"
requires-python = ">= 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.dependencies]
python = "3.10.*"
ffmpeg = "6.1.1.*"
rosbags = ">=0.10.10,<0.11"

[tool.pixi.system-requirements]
libc = { family = "glibc", version = "2.31" }

[tool.pixi.pypi-dependencies]
pai_training = { path = ".", editable = true }
lerobot = { path = "lerobot", editable = true, extras = ["pi0", "test", "pusht"] }
draccus = "==0.10.0"
pymunk = "==6.6.0"

[tool.pixi.activation.env]
LD_LIBRARY_PATH = "$CONDA_PREFIX/lib:$LD_LIBRARY_PATH"
PYTHONNOUSERSITE = "1"

[tool.pixi.tasks]
convert = { cmd = "python scripts/rosbag2lerobot.py" }
train = { cmd = "python scripts/train.py" }
debug-policy = { cmd = "python -m scripts/debug_policy.py" }
infer = { cmd = "python scripts/infer.py" }

